<resources>
    <string name="app_name">kunaal-MyBookWishlist</string>
    <string name="total_books_0_read_0">Total Books: 0, Read: 0</string>

    <string name="book_title">Book Title</string>
    <string name="author_name">Author Name</string>
    <string name="genre">Genre</string>
    <string name="read_unread">Read/Unread</string>
    <string name="adding_editing_a_book">Adding/Editing a Book</string>
    <string name="publication_year">Publication Year</string>
    <string name="read">Read</string>
    <string name="genre_prompt">Genre</string>

</resources>