<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adding_editing_a_book"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_title"
            android:maxLength="50"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_name"
            android:maxLength="30"
            android:inputType="text" />

        <Spinner
            android:id="@+id/genreSpinner"
            android:layout_width="222dp"
            android:layout_height="43dp"
            android:prompt="@string/genre_prompt" />


        <EditText
            android:id="@+id/editTextPublicationYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publication_year"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/readCheckBox"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/read" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Save" />

    </LinearLayout>
</ScrollView>
