<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bookTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/bookAuthorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_name" />

        <TextView
            android:id="@+id/bookGenreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre" />

    </LinearLayout>

    <TextView
        android:id="@+id/bookStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/read_unread" />

</LinearLayout>
